--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+l="stylesheet" href="style.css">
     <title>Ejemplo de errores</title>
 
-</head>
+<head>
 
 <body>
     <div class="container">
         <header>
             <h1>Bienvenido a mi página</h1>
             <p>Esta es una página de ejemplo para el examen. Aquí se mostrarán algunos errores que debes corregir.</p>
-        </header>
+        </head>
 
         <div class="image-container">
             <img src="imagen-ejemplo.jpg" alt="Descripción de la imagen">
@@ -26,6 +28,7 @@
                 <li>Elemento 1</li>
                 <li>Elemento 2</li>
                 <li>Elemento 3</li>
+  </ul>
 
             <h2>Descripción de los elementos</h2>
             <p>Los elementos listados arriba son ejemplos de cómo se puede estructurar una lista en HTML.</p>
@@ -38,5 +41,4 @@
 
    
 </body>
-</html>
 
